2007-09-23  Ethan Merritt  <merritt@u.washington.edu>

	* src/axis.c (gen_tics): On log scale plots with very large range,
	the minitic interval can overflow integer representation.
	Bug #1797500

	* term/gd.trm (PNG_image):  gdImageGetClip was introduced in libgd
	version 2.0.12.  Don't try to use it if version is less than 2.
	Bug #1790171

2007-09-01  Ethan Merritt  <merritt@u.washington.edu>

	Tag version 4.2.2 using command
		cvs tag -c "Release_4_2_2"
	
	Version 4.2.2 released via SourceForge.  Any further commits to
	this tree will be in 4.2.3 if such a version is ever released.

2007-08-31  Ethan Merritt  <merritt@u.washington.edu>

	The axis label bug is serious enough to warrant an updated release
	IMHO.  Obviously the release candidate for 4.2.1 didn't get enough
	testing.

	src/version.c PATCHLEVEL configure.in docs/titlepag.tex
	Increment patchlevel to 2

2007-08-28  Ethan Merritt  <merritt@u.washington.edu>

	* src/graph3d.c (draw_3d_graphbox):  Fix bug that caused axis labels
	not to be drawn in 'set view map' mode.  This was supposed to have been
	applied 2007-03-14 but somehow never made it into cvs.
	Serious bug in 4.2.1

2007-08-28  Ethan Merritt  <merritt@u.washington.edu>

	* src/graphics.c (plot_c_bars): Apply border color from 
	'set style fill' to filled candlesticks.

2007-08-26  Ethan Merritt  <merritt@u.washington.edu>

	Tag version 4.2.1 using command
		cvs tag -c "Release_4_2_1"
	
	Version 4.2.1 released via SourceForge.  Any further commits to
	this tree will be in 4.2.2 if such a version is ever released.

2007-08-25  Ethan Merritt  <merritt@u.washington.edu>

	* src/version.c src/syscfg.h src/Makefile.am src/win/pgnuplot.c
	* src/show.c:
	Update version and contact info for 4.2.1

2007-08-25  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* docs/gnuplot-ja.doc docs/faq-ja.tex docs/README.ja docs/term-ja.diff: 
	Sync Japanese documentation to current version.

2007-08-25  Ethan Merritt  <merritt@u.washington.edu>
